@@ -12,7 +12,6 @@ import com.gregtechceu.gtceu.api.data.chemical.material.stack.ItemMaterialInfo;
 import com.gregtechceu.gtceu.api.data.chemical.material.stack.MaterialEntry;
 import com.gregtechceu.gtceu.api.data.chemical.material.stack.MaterialStack;
 import com.gregtechceu.gtceu.api.data.tag.TagPrefix;
-import com.gregtechceu.gtceu.api.data.tag.TagUtil;
 import com.gregtechceu.gtceu.api.item.ComponentItem;
 import com.gregtechceu.gtceu.api.item.IComponentItem;
 import com.gregtechceu.gtceu.api.item.TagPrefixItem;
@@ -34,7 +33,7 @@ import com.gregtechceu.gtceu.common.item.modules.ImageModuleBehaviour;
 import com.gregtechceu.gtceu.common.item.modules.TextModuleBehaviour;
 import com.gregtechceu.gtceu.config.ConfigHolder;
 import com.gregtechceu.gtceu.data.lang.LangHandler;
-import com.gregtechceu.gtceu.data.recipe.CustomTags;
+import com.gregtechceu.gtceu.data.tags.GTTags;
 import com.gregtechceu.gtceu.utils.FormattingUtil;
 import com.gregtechceu.gtceu.utils.GTUtil;
 import com.gregtechceu.gtceu.utils.memoization.GTMemoizer;
@@ -73,7 +72,7 @@ import com.tterrag.registrate.util.entry.ItemEntry;
 import com.tterrag.registrate.util.nullness.NonNullBiConsumer;
 import com.tterrag.registrate.util.nullness.NonNullConsumer;
 import com.tterrag.registrate.util.nullness.NonNullFunction;
-import it.unimi.dsi.fastutil.objects.Object2ObjectOpenHashMap;
+import it.unimi.dsi.fastutil.objects.Reference2ObjectLinkedOpenHashMap;
 import org.apache.commons.lang3.StringUtils;
 import org.jetbrains.annotations.NotNull;
 
@@ -322,7 +321,7 @@ public class GTItems {
     public static ItemEntry<ComponentItem> SPRAY_SOLVENT = REGISTRATE.item("solvent_spray_can", ComponentItem::create)
             .lang("Spray Can (Solvent)")
             .properties(p -> p.stacksTo(1))
-            .onRegister(attach(new ColorSprayBehaviour(() -> SPRAY_EMPTY.asStack(), 1024, -1))).register();
+            .onRegister(attach(new ColorSprayBehaviour(() -> SPRAY_EMPTY.asStack(), 1024, null))).register();
 
     public static ItemEntry<ComponentItem> PORTABLE_SCANNER = REGISTRATE.item("portable_scanner", ComponentItem::create)
             .lang("Portable Scanner")
@@ -422,25 +421,26 @@ public class GTItems {
             .lang("Matches")
             .setData(ProviderType.ITEM_MODEL, NonNullBiConsumer.noop())
             .onRegister(attach(new LighterBehavior(false, false, false)))
-            .tag(CustomTags.TOOLS_IGNITER)
+            .tag(GTTags.Items.TOOLS_IGNITER)
             .register();
     public static ItemEntry<ComponentItem> TOOL_MATCHBOX = REGISTRATE.item("matchbox", ComponentItem::create)
             .lang("Matchbox")
             .properties(p -> p.stacksTo(1))
             .setData(ProviderType.ITEM_MODEL, NonNullBiConsumer.noop())
             .onRegister(attach(new LighterBehavior(false, true, false, () -> new ItemStack(Items.PAPER, 1), 16)))
-            .tag(CustomTags.TOOLS_IGNITER)
+            .tag(GTTags.Items.TOOLS_IGNITER)
             .register();
     public static ItemEntry<ComponentItem> TOOL_LIGHTER_INVAR = REGISTRATE.item("invar_lighter", ComponentItem::create)
             .lang("Invar Lighter")
             .properties(p -> p.stacksTo(1))
             .setData(ProviderType.ITEM_MODEL, NonNullBiConsumer.noop())
             .onRegister(attach(new LighterBehavior(true, true, true)))
-            .onRegister(attach(new FilteredFluidContainer(100, true, x -> x.getFluid().is(CustomTags.LIGHTER_FLUIDS)),
+            .onRegister(attach(
+                    new FilteredFluidContainer(100, true, x -> x.getFluid().is(GTTags.Fluids.LIGHTER_FLUIDS)),
                     new ItemFluidContainer()))
             .onRegister(modelPredicate(GTCEu.id("lighter_open"),
                     (itemStack) -> itemStack.getOrCreateTag().getBoolean(LighterBehavior.LIGHTER_OPEN) ? 1.0f : 0.0f))
-            .tag(CustomTags.TOOLS_IGNITER)
+            .tag(GTTags.Items.TOOLS_IGNITER)
             .register();
     public static ItemEntry<ComponentItem> TOOL_LIGHTER_PLATINUM = REGISTRATE
             .item("platinum_lighter", ComponentItem::create)
@@ -448,11 +448,12 @@ public class GTItems {
             .properties(p -> p.stacksTo(1).rarity(Rarity.UNCOMMON))
             .setData(ProviderType.ITEM_MODEL, NonNullBiConsumer.noop())
             .onRegister(attach(new LighterBehavior(true, true, true)))
-            .onRegister(attach(new FilteredFluidContainer(1000, true, x -> x.getFluid().is(CustomTags.LIGHTER_FLUIDS)),
+            .onRegister(attach(
+                    new FilteredFluidContainer(1000, true, x -> x.getFluid().is(GTTags.Fluids.LIGHTER_FLUIDS)),
                     new ItemFluidContainer()))
             .onRegister(modelPredicate(GTCEu.id("lighter_open"),
                     (itemStack) -> itemStack.getOrCreateTag().getBoolean(LighterBehavior.LIGHTER_OPEN) ? 1.0f : 0.0f))
-            .tag(CustomTags.TOOLS_IGNITER)
+            .tag(GTTags.Items.TOOLS_IGNITER)
             .register();
 
     public static ItemEntry<Item> CARBON_FIBERS = REGISTRATE.item("carbon_fibers", Item::new)
@@ -515,7 +516,7 @@ public class GTItems {
             .item("tantalum_capacitor", ComponentItem::create)
             .lang("Tantalum Capacitor")
             .onRegister(attach(ElectricStats.createRechargeableBattery(1000, GTValues.ULV)))
-            .tag(CustomTags.ULV_BATTERIES).register();
+            .tag(GTTags.Items.BATTERIES_ULV).register();
 
     public static ItemEntry<ComponentItem> BATTERY_LV_SODIUM = REGISTRATE
             .item("lv_sodium_battery", ComponentItem::create)
@@ -523,21 +524,21 @@ public class GTItems {
             .model(overrideModel(GTCEu.id("battery"), 8))
             .onRegister(modelPredicate(GTCEu.id("battery"), ElectricStats::getStoredPredicate))
             .onRegister(attach(ElectricStats.createRechargeableBattery(80000, GTValues.LV)))
-            .tag(CustomTags.LV_BATTERIES).register();
+            .tag(GTTags.Items.BATTERIES_LV).register();
     public static ItemEntry<ComponentItem> BATTERY_MV_SODIUM = REGISTRATE
             .item("mv_sodium_battery", ComponentItem::create)
             .lang("Medium Sodium Battery")
             .model(overrideModel(GTCEu.id("battery"), 8))
             .onRegister(modelPredicate(GTCEu.id("battery"), ElectricStats::getStoredPredicate))
             .onRegister(attach(ElectricStats.createRechargeableBattery(360000, GTValues.MV)))
-            .tag(CustomTags.MV_BATTERIES).register();
+            .tag(GTTags.Items.BATTERIES_MV).register();
     public static ItemEntry<ComponentItem> BATTERY_HV_SODIUM = REGISTRATE
             .item("hv_sodium_battery", ComponentItem::create)
             .lang("Large Sodium Battery")
             .model(overrideModel(GTCEu.id("battery"), 8))
             .onRegister(modelPredicate(GTCEu.id("battery"), ElectricStats::getStoredPredicate))
             .onRegister(attach(ElectricStats.createRechargeableBattery(1200000, GTValues.HV)))
-            .tag(CustomTags.HV_BATTERIES).register();
+            .tag(GTTags.Items.BATTERIES_HV).register();
 
     public static ItemEntry<ComponentItem> BATTERY_LV_LITHIUM = REGISTRATE
             .item("lv_lithium_battery", ComponentItem::create)
@@ -545,21 +546,21 @@ public class GTItems {
             .model(overrideModel(GTCEu.id("battery"), 8))
             .onRegister(modelPredicate(GTCEu.id("battery"), ElectricStats::getStoredPredicate))
             .onRegister(attach(ElectricStats.createRechargeableBattery(120000, GTValues.LV)))
-            .tag(CustomTags.LV_BATTERIES).register();
+            .tag(GTTags.Items.BATTERIES_LV).register();
     public static ItemEntry<ComponentItem> BATTERY_MV_LITHIUM = REGISTRATE
             .item("mv_lithium_battery", ComponentItem::create)
             .lang("Medium Lithium Battery")
             .model(overrideModel(GTCEu.id("battery"), 8))
             .onRegister(modelPredicate(GTCEu.id("battery"), ElectricStats::getStoredPredicate))
             .onRegister(attach(ElectricStats.createRechargeableBattery(420000, GTValues.MV)))
-            .tag(CustomTags.MV_BATTERIES).register();
+            .tag(GTTags.Items.BATTERIES_MV).register();
     public static ItemEntry<ComponentItem> BATTERY_HV_LITHIUM = REGISTRATE
             .item("hv_lithium_battery", ComponentItem::create)
             .lang("Large Lithium Battery")
             .model(overrideModel(GTCEu.id("battery"), 8))
             .onRegister(modelPredicate(GTCEu.id("battery"), ElectricStats::getStoredPredicate))
             .onRegister(attach(ElectricStats.createRechargeableBattery(1800000, GTValues.HV)))
-            .tag(CustomTags.HV_BATTERIES).register();
+            .tag(GTTags.Items.BATTERIES_HV).register();
 
     public static ItemEntry<ComponentItem> BATTERY_LV_CADMIUM = REGISTRATE
             .item("lv_cadmium_battery", ComponentItem::create)
@@ -567,33 +568,33 @@ public class GTItems {
             .model(overrideModel(GTCEu.id("battery"), 8))
             .onRegister(modelPredicate(GTCEu.id("battery"), ElectricStats::getStoredPredicate))
             .onRegister(attach(ElectricStats.createRechargeableBattery(100000, GTValues.LV)))
-            .tag(CustomTags.LV_BATTERIES).register();
+            .tag(GTTags.Items.BATTERIES_LV).register();
     public static ItemEntry<ComponentItem> BATTERY_MV_CADMIUM = REGISTRATE
             .item("mv_cadmium_battery", ComponentItem::create)
             .lang("Medium Cadmium Battery")
             .model(overrideModel(GTCEu.id("battery"), 8))
             .onRegister(modelPredicate(GTCEu.id("battery"), ElectricStats::getStoredPredicate))
             .onRegister(attach(ElectricStats.createRechargeableBattery(400000, GTValues.MV)))
-            .tag(CustomTags.MV_BATTERIES).register();
+            .tag(GTTags.Items.BATTERIES_MV).register();
     public static ItemEntry<ComponentItem> BATTERY_HV_CADMIUM = REGISTRATE
             .item("hv_cadmium_battery", ComponentItem::create)
             .lang("Large Cadmium Battery")
             .model(overrideModel(GTCEu.id("battery"), 8))
             .onRegister(modelPredicate(GTCEu.id("battery"), ElectricStats::getStoredPredicate))
             .onRegister(attach(ElectricStats.createRechargeableBattery(1600000, GTValues.HV)))
-            .tag(CustomTags.HV_BATTERIES).register();
+            .tag(GTTags.Items.BATTERIES_HV).register();
 
     public static ItemEntry<ComponentItem> ENERGIUM_CRYSTAL = REGISTRATE.item("energy_crystal", ComponentItem::create)
             .lang("Energium Crystal")
             .model(overrideModel(GTCEu.id("battery"), 8))
             .onRegister(modelPredicate(GTCEu.id("battery"), ElectricStats::getStoredPredicate))
             .onRegister(attach(ElectricStats.createRechargeableBattery(6_400_000L, GTValues.HV)))
-            .tag(CustomTags.HV_BATTERIES).register();
+            .tag(GTTags.Items.BATTERIES_HV).register();
     public static ItemEntry<ComponentItem> LAPOTRON_CRYSTAL = REGISTRATE.item("lapotron_crystal", ComponentItem::create)
             .model(overrideModel(GTCEu.id("battery"), 8))
             .onRegister(modelPredicate(GTCEu.id("battery"), ElectricStats::getStoredPredicate))
             .onRegister(attach(ElectricStats.createRechargeableBattery(25_000_000L, GTValues.EV)))
-            .tag(CustomTags.EV_BATTERIES).register();
+            .tag(GTTags.Items.BATTERIES_EV).register();
 
     public static ItemEntry<ComponentItem> BATTERY_EV_VANADIUM = REGISTRATE
             .item("ev_vanadium_battery", ComponentItem::create)
@@ -601,21 +602,21 @@ public class GTItems {
             .model(overrideModel(GTCEu.id("battery"), 8))
             .onRegister(modelPredicate(GTCEu.id("battery"), ElectricStats::getStoredPredicate))
             .onRegister(attach(ElectricStats.createRechargeableBattery(10_240_000L, GTValues.EV)))
-            .tag(CustomTags.EV_BATTERIES).register();
+            .tag(GTTags.Items.BATTERIES_EV).register();
     public static ItemEntry<ComponentItem> BATTERY_IV_VANADIUM = REGISTRATE
             .item("iv_vanadium_battery", ComponentItem::create)
             .lang("Medium Vanadium Battery")
             .model(overrideModel(GTCEu.id("battery"), 8))
             .onRegister(modelPredicate(GTCEu.id("battery"), ElectricStats::getStoredPredicate))
             .onRegister(attach(ElectricStats.createRechargeableBattery(40_960_000L, GTValues.IV)))
-            .tag(CustomTags.IV_BATTERIES).register();
+            .tag(GTTags.Items.BATTERIES_IV).register();
     public static ItemEntry<ComponentItem> BATTERY_LuV_VANADIUM = REGISTRATE
             .item("luv_vanadium_battery", ComponentItem::create)
             .lang("Large Vanadium Battery")
             .model(overrideModel(GTCEu.id("battery"), 8))
             .onRegister(modelPredicate(GTCEu.id("battery"), ElectricStats::getStoredPredicate))
             .onRegister(attach(ElectricStats.createRechargeableBattery(163_840_000L, GTValues.LuV)))
-            .tag(CustomTags.LuV_BATTERIES).register();
+            .tag(GTTags.Items.BATTERIES_LuV).register();
 
     public static ItemEntry<ComponentItem> BATTERY_ZPM_NAQUADRIA = REGISTRATE
             .item("zpm_naquadria_battery", ComponentItem::create)
@@ -623,14 +624,14 @@ public class GTItems {
             .model(overrideModel(GTCEu.id("battery"), 8))
             .onRegister(modelPredicate(GTCEu.id("battery"), ElectricStats::getStoredPredicate))
             .onRegister(attach(ElectricStats.createRechargeableBattery(655_360_000L, GTValues.ZPM)))
-            .tag(CustomTags.ZPM_BATTERIES).register();
+            .tag(GTTags.Items.BATTERIES_ZPM).register();
     public static ItemEntry<ComponentItem> BATTERY_UV_NAQUADRIA = REGISTRATE
             .item("uv_naquadria_battery", ComponentItem::create)
             .lang("Large Naquadria Battery")
             .model(overrideModel(GTCEu.id("battery"), 8))
             .onRegister(modelPredicate(GTCEu.id("battery"), ElectricStats::getStoredPredicate))
             .onRegister(attach(ElectricStats.createRechargeableBattery(2_621_440_000L, GTValues.UV)))
-            .tag(CustomTags.UV_BATTERIES).register();
+            .tag(GTTags.Items.BATTERIES_UV).register();
 
     public static ItemEntry<ComponentItem> ENERGY_LAPOTRONIC_ORB = REGISTRATE
             .item("lapotronic_energy_orb", ComponentItem::create)
@@ -638,27 +639,27 @@ public class GTItems {
             .model(overrideModel(GTCEu.id("battery"), 8))
             .onRegister(modelPredicate(GTCEu.id("battery"), ElectricStats::getStoredPredicate))
             .onRegister(attach(ElectricStats.createRechargeableBattery(250_000_000L, GTValues.IV)))
-            .tag(CustomTags.IV_BATTERIES).register();
+            .tag(GTTags.Items.BATTERIES_IV).register();
     public static ItemEntry<ComponentItem> ENERGY_LAPOTRONIC_ORB_CLUSTER = REGISTRATE
             .item("lapotronic_energy_orb_cluster", ComponentItem::create)
             .lang("Lapotronic Energy Orb Cluster")
             .model(overrideModel(GTCEu.id("battery"), 8))
             .onRegister(modelPredicate(GTCEu.id("battery"), ElectricStats::getStoredPredicate))
             .onRegister(attach(ElectricStats.createRechargeableBattery(1_000_000_000L, GTValues.LuV)))
-            .tag(CustomTags.LuV_BATTERIES).register();
+            .tag(GTTags.Items.BATTERIES_LuV).register();
 
     public static ItemEntry<ComponentItem> ENERGY_MODULE = REGISTRATE.item("energy_module", ComponentItem::create)
             .lang("Energy Module")
             .model(overrideModel(GTCEu.id("battery"), 8))
             .onRegister(modelPredicate(GTCEu.id("battery"), ElectricStats::getStoredPredicate))
             .onRegister(attach(ElectricStats.createRechargeableBattery(4_000_000_000L, GTValues.ZPM)))
-            .tag(CustomTags.ZPM_BATTERIES).register();
+            .tag(GTTags.Items.BATTERIES_ZPM).register();
     public static ItemEntry<ComponentItem> ENERGY_CLUSTER = REGISTRATE.item("energy_cluster", ComponentItem::create)
             .lang("Energy Cluster")
             .model(overrideModel(GTCEu.id("battery"), 8))
             .onRegister(modelPredicate(GTCEu.id("battery"), ElectricStats::getStoredPredicate))
             .onRegister(attach(ElectricStats.createRechargeableBattery(20_000_000_000L, GTValues.UV)))
-            .tag(CustomTags.UV_BATTERIES).register();
+            .tag(GTTags.Items.BATTERIES_UV).register();
 
     public static ItemEntry<ComponentItem> ZERO_POINT_MODULE = REGISTRATE
             .item("zero_point_module", ComponentItem::create)
@@ -671,39 +672,39 @@ public class GTItems {
             .model(overrideModel(GTCEu.id("battery"), 8))
             .onRegister(modelPredicate(GTCEu.id("battery"), ElectricStats::getStoredPredicate))
             .onRegister(attach(ElectricStats.createRechargeableBattery(Long.MAX_VALUE, GTValues.UHV)))
-            .tag(CustomTags.UHV_BATTERIES).register();
+            .tag(GTTags.Items.BATTERIES_UHV).register();
 
     public static ItemEntry<Item> ELECTRIC_MOTOR_LV = REGISTRATE.item("lv_electric_motor", Item::new)
             .lang("LV Electric Motor")
-            .tag(CustomTags.ELECTRIC_MOTORS)
+            .tag(GTTags.Items.ELECTRIC_MOTORS)
             .register();
     public static ItemEntry<Item> ELECTRIC_MOTOR_MV = REGISTRATE.item("mv_electric_motor", Item::new)
             .lang("MV Electric Motor")
-            .tag(CustomTags.ELECTRIC_MOTORS)
+            .tag(GTTags.Items.ELECTRIC_MOTORS)
             .register();
     public static ItemEntry<Item> ELECTRIC_MOTOR_HV = REGISTRATE.item("hv_electric_motor", Item::new)
             .lang("HV Electric Motor")
-            .tag(CustomTags.ELECTRIC_MOTORS)
+            .tag(GTTags.Items.ELECTRIC_MOTORS)
             .register();
     public static ItemEntry<Item> ELECTRIC_MOTOR_EV = REGISTRATE.item("ev_electric_motor", Item::new)
             .lang("EV Electric Motor")
-            .tag(CustomTags.ELECTRIC_MOTORS)
+            .tag(GTTags.Items.ELECTRIC_MOTORS)
             .register();
     public static ItemEntry<Item> ELECTRIC_MOTOR_IV = REGISTRATE.item("iv_electric_motor", Item::new)
             .lang("IV Electric Motor")
-            .tag(CustomTags.ELECTRIC_MOTORS)
+            .tag(GTTags.Items.ELECTRIC_MOTORS)
             .register();
     public static ItemEntry<Item> ELECTRIC_MOTOR_LuV = REGISTRATE.item("luv_electric_motor", Item::new)
             .lang("LuV Electric Motor")
-            .tag(CustomTags.ELECTRIC_MOTORS)
+            .tag(GTTags.Items.ELECTRIC_MOTORS)
             .register();
     public static ItemEntry<Item> ELECTRIC_MOTOR_ZPM = REGISTRATE.item("zpm_electric_motor", Item::new)
             .lang("ZPM Electric Motor")
-            .tag(CustomTags.ELECTRIC_MOTORS)
+            .tag(GTTags.Items.ELECTRIC_MOTORS)
             .register();
     public static ItemEntry<Item> ELECTRIC_MOTOR_UV = REGISTRATE.item("uv_electric_motor", Item::new)
             .lang("UV Electric Motor")
-            .tag(CustomTags.ELECTRIC_MOTORS)
+            .tag(GTTags.Items.ELECTRIC_MOTORS)
             .register();
     public static ItemEntry<Item> ELECTRIC_MOTOR_UHV = GTCEuAPI.isHighTier() ?
             REGISTRATE.item("uhv_electric_motor", Item::new).lang("UHV Electric Motor")
@@ -733,7 +734,7 @@ public class GTItems {
                 lines.add(Component.translatable("item.gtceu.electric.pump.tooltip"));
                 lines.add(fluidRateTooltip(GTValues.LV));
             })))
-            .tag(CustomTags.ELECTRIC_PUMPS)
+            .tag(GTTags.Items.ELECTRIC_PUMPS)
             .register();
 
     public static ItemEntry<ComponentItem> ELECTRIC_PUMP_MV = REGISTRATE.item("mv_electric_pump", ComponentItem::create)
@@ -743,7 +744,7 @@ public class GTItems {
                 lines.add(Component.translatable("item.gtceu.electric.pump.tooltip"));
                 lines.add(fluidRateTooltip(GTValues.MV));
             })))
-            .tag(CustomTags.ELECTRIC_PUMPS)
+            .tag(GTTags.Items.ELECTRIC_PUMPS)
             .register();
     public static ItemEntry<ComponentItem> ELECTRIC_PUMP_HV = REGISTRATE.item("hv_electric_pump", ComponentItem::create)
             .lang("HV Electric Pump")
@@ -752,7 +753,7 @@ public class GTItems {
                 lines.add(Component.translatable("item.gtceu.electric.pump.tooltip"));
                 lines.add(fluidRateTooltip(GTValues.HV));
             })))
-            .tag(CustomTags.ELECTRIC_PUMPS)
+            .tag(GTTags.Items.ELECTRIC_PUMPS)
             .register();
     public static ItemEntry<ComponentItem> ELECTRIC_PUMP_EV = REGISTRATE.item("ev_electric_pump", ComponentItem::create)
             .lang("EV Electric Pump")
@@ -761,7 +762,7 @@ public class GTItems {
                 lines.add(Component.translatable("item.gtceu.electric.pump.tooltip"));
                 lines.add(fluidRateTooltip(GTValues.EV));
             })))
-            .tag(CustomTags.ELECTRIC_PUMPS)
+            .tag(GTTags.Items.ELECTRIC_PUMPS)
             .register();
     public static ItemEntry<ComponentItem> ELECTRIC_PUMP_IV = REGISTRATE.item("iv_electric_pump", ComponentItem::create)
             .lang("IV Electric Pump")
@@ -770,7 +771,7 @@ public class GTItems {
                 lines.add(Component.translatable("item.gtceu.electric.pump.tooltip"));
                 lines.add(fluidRateTooltip(GTValues.IV));
             })))
-            .tag(CustomTags.ELECTRIC_PUMPS)
+            .tag(GTTags.Items.ELECTRIC_PUMPS)
             .register();
     public static ItemEntry<ComponentItem> ELECTRIC_PUMP_LuV = REGISTRATE
             .item("luv_electric_pump", ComponentItem::create)
@@ -780,7 +781,7 @@ public class GTItems {
                 lines.add(Component.translatable("item.gtceu.electric.pump.tooltip"));
                 lines.add(fluidRateTooltip(GTValues.LuV));
             })))
-            .tag(CustomTags.ELECTRIC_PUMPS)
+            .tag(GTTags.Items.ELECTRIC_PUMPS)
             .register();
     public static ItemEntry<ComponentItem> ELECTRIC_PUMP_ZPM = REGISTRATE
             .item("zpm_electric_pump", ComponentItem::create)
@@ -790,7 +791,7 @@ public class GTItems {
                 lines.add(Component.translatable("item.gtceu.electric.pump.tooltip"));
                 lines.add(fluidRateTooltip(GTValues.ZPM));
             })))
-            .tag(CustomTags.ELECTRIC_PUMPS)
+            .tag(GTTags.Items.ELECTRIC_PUMPS)
             .register();
     public static ItemEntry<ComponentItem> ELECTRIC_PUMP_UV = REGISTRATE.item("uv_electric_pump", ComponentItem::create)
             .lang("UV Electric Pump")
@@ -799,7 +800,7 @@ public class GTItems {
                 lines.add(Component.translatable("item.gtceu.electric.pump.tooltip"));
                 lines.add(fluidRateTooltip(GTValues.UV));
             })))
-            .tag(CustomTags.ELECTRIC_PUMPS)
+            .tag(GTTags.Items.ELECTRIC_PUMPS)
             .register();
 
     public static ItemEntry<ComponentItem> ELECTRIC_PUMP_UHV = GTCEuAPI.isHighTier() ?
@@ -865,7 +866,7 @@ public class GTItems {
                 lines.add(Component.translatable("item.gtceu.fluid.regulator.tooltip"));
                 lines.add(fluidRateTooltip(GTValues.LV));
             })))
-            .tag(CustomTags.FLUID_REGULATORS)
+            .tag(GTTags.Items.FLUID_REGULATORS)
             .register();
     public static ItemEntry<ComponentItem> FLUID_REGULATOR_MV = REGISTRATE
             .item("mv_fluid_regulator", ComponentItem::create)
@@ -875,7 +876,7 @@ public class GTItems {
                 lines.add(Component.translatable("item.gtceu.fluid.regulator.tooltip"));
                 lines.add(fluidRateTooltip(GTValues.MV));
             })))
-            .tag(CustomTags.FLUID_REGULATORS)
+            .tag(GTTags.Items.FLUID_REGULATORS)
             .register();
     public static ItemEntry<ComponentItem> FLUID_REGULATOR_HV = REGISTRATE
             .item("hv_fluid_regulator", ComponentItem::create)
@@ -885,7 +886,7 @@ public class GTItems {
                 lines.add(Component.translatable("item.gtceu.fluid.regulator.tooltip"));
                 lines.add(fluidRateTooltip(GTValues.HV));
             })))
-            .tag(CustomTags.FLUID_REGULATORS)
+            .tag(GTTags.Items.FLUID_REGULATORS)
             .register();
     public static ItemEntry<ComponentItem> FLUID_REGULATOR_EV = REGISTRATE
             .item("ev_fluid_regulator", ComponentItem::create)
@@ -895,7 +896,7 @@ public class GTItems {
                 lines.add(Component.translatable("item.gtceu.fluid.regulator.tooltip"));
                 lines.add(fluidRateTooltip(GTValues.EV));
             })))
-            .tag(CustomTags.FLUID_REGULATORS)
+            .tag(GTTags.Items.FLUID_REGULATORS)
             .register();
     public static ItemEntry<ComponentItem> FLUID_REGULATOR_IV = REGISTRATE
             .item("iv_fluid_regulator", ComponentItem::create)
@@ -905,7 +906,7 @@ public class GTItems {
                 lines.add(Component.translatable("item.gtceu.fluid.regulator.tooltip"));
                 lines.add(fluidRateTooltip(GTValues.IV));
             })))
-            .tag(CustomTags.FLUID_REGULATORS)
+            .tag(GTTags.Items.FLUID_REGULATORS)
             .register();
     public static ItemEntry<ComponentItem> FLUID_REGULATOR_LuV = REGISTRATE
             .item("luv_fluid_regulator", ComponentItem::create)
@@ -915,7 +916,7 @@ public class GTItems {
                 lines.add(Component.translatable("item.gtceu.fluid.regulator.tooltip"));
                 lines.add(fluidRateTooltip(GTValues.LuV));
             })))
-            .tag(CustomTags.FLUID_REGULATORS)
+            .tag(GTTags.Items.FLUID_REGULATORS)
             .register();
     public static ItemEntry<ComponentItem> FLUID_REGULATOR_ZPM = REGISTRATE
             .item("zpm_fluid_regulator", ComponentItem::create)
@@ -925,7 +926,7 @@ public class GTItems {
                 lines.add(Component.translatable("item.gtceu.fluid.regulator.tooltip"));
                 lines.add(fluidRateTooltip(GTValues.ZPM));
             })))
-            .tag(CustomTags.FLUID_REGULATORS)
+            .tag(GTTags.Items.FLUID_REGULATORS)
             .register();
     public static ItemEntry<ComponentItem> FLUID_REGULATOR_UV = REGISTRATE
             .item("uv_fluid_regulator", ComponentItem::create)
@@ -935,7 +936,7 @@ public class GTItems {
                 lines.add(Component.translatable("item.gtceu.fluid.regulator.tooltip"));
                 lines.add(fluidRateTooltip(GTValues.UV));
             })))
-            .tag(CustomTags.FLUID_REGULATORS)
+            .tag(GTTags.Items.FLUID_REGULATORS)
             .register();
     public static ItemEntry<ComponentItem> FLUID_REGULATOR_UHV = GTCEuAPI.isHighTier() ?
             REGISTRATE.item("uhv_fluid_regulator", ComponentItem::create)
@@ -1002,7 +1003,7 @@ public class GTItems {
                 lines.add(Component.translatable("item.gtceu.conveyor.module.tooltip"));
                 lines.add(itemRateTooltip(GTValues.LV));
             })))
-            .tag(CustomTags.CONVEYOR_MODULES)
+            .tag(GTTags.Items.CONVEYOR_MODULES)
             .register();
     public static ItemEntry<ComponentItem> CONVEYOR_MODULE_MV = REGISTRATE
             .item("mv_conveyor_module", ComponentItem::create)
@@ -1012,7 +1013,7 @@ public class GTItems {
                 lines.add(Component.translatable("item.gtceu.conveyor.module.tooltip"));
                 lines.add(itemRateTooltip(GTValues.MV));
             })))
-            .tag(CustomTags.CONVEYOR_MODULES)
+            .tag(GTTags.Items.CONVEYOR_MODULES)
             .register();
     public static ItemEntry<ComponentItem> CONVEYOR_MODULE_HV = REGISTRATE
             .item("hv_conveyor_module", ComponentItem::create)
@@ -1022,7 +1023,7 @@ public class GTItems {
                 lines.add(Component.translatable("item.gtceu.conveyor.module.tooltip"));
                 lines.add(itemRateTooltip(GTValues.HV));
             })))
-            .tag(CustomTags.CONVEYOR_MODULES)
+            .tag(GTTags.Items.CONVEYOR_MODULES)
             .register();
     public static ItemEntry<ComponentItem> CONVEYOR_MODULE_EV = REGISTRATE
             .item("ev_conveyor_module", ComponentItem::create)
@@ -1032,7 +1033,7 @@ public class GTItems {
                 lines.add(Component.translatable("item.gtceu.conveyor.module.tooltip"));
                 lines.add(itemRateTooltip(GTValues.EV));
             })))
-            .tag(CustomTags.CONVEYOR_MODULES)
+            .tag(GTTags.Items.CONVEYOR_MODULES)
             .register();
     public static ItemEntry<ComponentItem> CONVEYOR_MODULE_IV = REGISTRATE
             .item("iv_conveyor_module", ComponentItem::create)
@@ -1042,7 +1043,7 @@ public class GTItems {
                 lines.add(Component.translatable("item.gtceu.conveyor.module.tooltip"));
                 lines.add(itemRateTooltip(GTValues.IV));
             })))
-            .tag(CustomTags.CONVEYOR_MODULES)
+            .tag(GTTags.Items.CONVEYOR_MODULES)
             .register();
     public static ItemEntry<ComponentItem> CONVEYOR_MODULE_LuV = REGISTRATE
             .item("luv_conveyor_module", ComponentItem::create)
@@ -1052,7 +1053,7 @@ public class GTItems {
                 lines.add(Component.translatable("item.gtceu.conveyor.module.tooltip"));
                 lines.add(itemRateTooltip(GTValues.LuV));
             })))
-            .tag(CustomTags.CONVEYOR_MODULES)
+            .tag(GTTags.Items.CONVEYOR_MODULES)
             .register();
     public static ItemEntry<ComponentItem> CONVEYOR_MODULE_ZPM = REGISTRATE
             .item("zpm_conveyor_module", ComponentItem::create)
@@ -1062,7 +1063,7 @@ public class GTItems {
                 lines.add(Component.translatable("item.gtceu.conveyor.module.tooltip"));
                 lines.add(itemRateTooltip(GTValues.ZPM));
             })))
-            .tag(CustomTags.CONVEYOR_MODULES)
+            .tag(GTTags.Items.CONVEYOR_MODULES)
             .register();
     public static ItemEntry<ComponentItem> CONVEYOR_MODULE_UV = REGISTRATE
             .item("uv_conveyor_module", ComponentItem::create)
@@ -1072,7 +1073,7 @@ public class GTItems {
                 lines.add(Component.translatable("item.gtceu.conveyor.module.tooltip"));
                 lines.add(itemRateTooltip(GTValues.UV));
             })))
-            .tag(CustomTags.CONVEYOR_MODULES)
+            .tag(GTTags.Items.CONVEYOR_MODULES)
             .register();
     public static ItemEntry<ComponentItem> CONVEYOR_MODULE_UHV = GTCEuAPI.isHighTier() ?
             REGISTRATE.item("uhv_conveyor_module", ComponentItem::create)
@@ -1127,35 +1128,35 @@ public class GTItems {
 
     public static ItemEntry<Item> ELECTRIC_PISTON_LV = REGISTRATE.item("lv_electric_piston", Item::new)
             .lang("LV Electric Piston")
-            .tag(CustomTags.ELECTRIC_PISTONS)
+            .tag(GTTags.Items.ELECTRIC_PISTONS)
             .register();
     public static ItemEntry<Item> ELECTRIC_PISTON_MV = REGISTRATE.item("mv_electric_piston", Item::new)
             .lang("MV Electric Piston")
-            .tag(CustomTags.ELECTRIC_PISTONS)
+            .tag(GTTags.Items.ELECTRIC_PISTONS)
             .register();
     public static ItemEntry<Item> ELECTRIC_PISTON_HV = REGISTRATE.item("hv_electric_piston", Item::new)
             .lang("HV Electric Piston")
-            .tag(CustomTags.ELECTRIC_PISTONS)
+            .tag(GTTags.Items.ELECTRIC_PISTONS)
             .register();
     public static ItemEntry<Item> ELECTRIC_PISTON_EV = REGISTRATE.item("ev_electric_piston", Item::new)
             .lang("EV Electric Piston")
-            .tag(CustomTags.ELECTRIC_PISTONS)
+            .tag(GTTags.Items.ELECTRIC_PISTONS)
             .register();
     public static ItemEntry<Item> ELECTRIC_PISTON_IV = REGISTRATE.item("iv_electric_piston", Item::new)
             .lang("IV Electric Piston")
-            .tag(CustomTags.ELECTRIC_PISTONS)
+            .tag(GTTags.Items.ELECTRIC_PISTONS)
             .register();
     public static ItemEntry<Item> ELECTRIC_PISTON_LuV = REGISTRATE.item("luv_electric_piston", Item::new)
             .lang("LuV Electric Piston")
-            .tag(CustomTags.ELECTRIC_PISTONS)
+            .tag(GTTags.Items.ELECTRIC_PISTONS)
             .register();
     public static ItemEntry<Item> ELECTRIC_PISTON_ZPM = REGISTRATE.item("zpm_electric_piston", Item::new)
             .lang("ZPM Electric Piston")
-            .tag(CustomTags.ELECTRIC_PISTONS)
+            .tag(GTTags.Items.ELECTRIC_PISTONS)
             .register();
     public static ItemEntry<Item> ELECTRIC_PISTON_UV = REGISTRATE.item("uv_electric_piston", Item::new)
             .lang("UV Electric Piston")
-            .tag(CustomTags.ELECTRIC_PISTONS)
+            .tag(GTTags.Items.ELECTRIC_PISTONS)
             .register();
     public static ItemEntry<Item> ELECTRIC_PISTON_UHV = GTCEuAPI.isHighTier() ?
             REGISTRATE.item("uhv_electric_piston", Item::new).lang("UHV Electric Piston")
@@ -1185,7 +1186,7 @@ public class GTItems {
                 lines.add(Component.translatable("item.gtceu.robot.arm.tooltip"));
                 lines.add(itemRateTooltip(GTValues.LV));
             })))
-            .tag(CustomTags.ROBOT_ARMS)
+            .tag(GTTags.Items.ROBOT_ARMS)
             .register();
     public static ItemEntry<ComponentItem> ROBOT_ARM_MV = REGISTRATE.item("mv_robot_arm", ComponentItem::create)
             .lang("MV Robot Arm")
@@ -1194,7 +1195,7 @@ public class GTItems {
                 lines.add(Component.translatable("item.gtceu.robot.arm.tooltip"));
                 lines.add(itemRateTooltip(GTValues.MV));
             })))
-            .tag(CustomTags.ROBOT_ARMS)
+            .tag(GTTags.Items.ROBOT_ARMS)
             .register();
     public static ItemEntry<ComponentItem> ROBOT_ARM_HV = REGISTRATE.item("hv_robot_arm", ComponentItem::create)
             .lang("HV Robot Arm")
@@ -1203,7 +1204,7 @@ public class GTItems {
                 lines.add(Component.translatable("item.gtceu.robot.arm.tooltip"));
                 lines.add(itemRateTooltip(GTValues.HV));
             })))
-            .tag(CustomTags.ROBOT_ARMS)
+            .tag(GTTags.Items.ROBOT_ARMS)
             .register();
     public static ItemEntry<ComponentItem> ROBOT_ARM_EV = REGISTRATE.item("ev_robot_arm", ComponentItem::create)
             .lang("EV Robot Arm")
@@ -1212,7 +1213,7 @@ public class GTItems {
                 lines.add(Component.translatable("item.gtceu.robot.arm.tooltip"));
                 lines.add(itemRateTooltip(GTValues.EV));
             })))
-            .tag(CustomTags.ROBOT_ARMS)
+            .tag(GTTags.Items.ROBOT_ARMS)
             .register();
     public static ItemEntry<ComponentItem> ROBOT_ARM_IV = REGISTRATE.item("iv_robot_arm", ComponentItem::create)
             .lang("IV Robot Arm")
@@ -1221,7 +1222,7 @@ public class GTItems {
                 lines.add(Component.translatable("item.gtceu.robot.arm.tooltip"));
                 lines.add(itemRateTooltip(GTValues.IV));
             })))
-            .tag(CustomTags.ROBOT_ARMS)
+            .tag(GTTags.Items.ROBOT_ARMS)
             .register();
     public static ItemEntry<ComponentItem> ROBOT_ARM_LuV = REGISTRATE.item("luv_robot_arm", ComponentItem::create)
             .lang("LuV Robot Arm")
@@ -1230,7 +1231,7 @@ public class GTItems {
                 lines.add(Component.translatable("item.gtceu.robot.arm.tooltip"));
                 lines.add(itemRateTooltip(GTValues.LuV));
             })))
-            .tag(CustomTags.ROBOT_ARMS)
+            .tag(GTTags.Items.ROBOT_ARMS)
             .register();
     public static ItemEntry<ComponentItem> ROBOT_ARM_ZPM = REGISTRATE.item("zpm_robot_arm", ComponentItem::create)
             .lang("ZPM Robot Arm")
@@ -1239,7 +1240,7 @@ public class GTItems {
                 lines.add(Component.translatable("item.gtceu.robot.arm.tooltip"));
                 lines.add(itemRateTooltip(GTValues.ZPM));
             })))
-            .tag(CustomTags.ROBOT_ARMS)
+            .tag(GTTags.Items.ROBOT_ARMS)
             .register();
     public static ItemEntry<ComponentItem> ROBOT_ARM_UV = REGISTRATE.item("uv_robot_arm", ComponentItem::create)
             .lang("UV Robot Arm")
@@ -1248,7 +1249,7 @@ public class GTItems {
                 lines.add(Component.translatable("item.gtceu.robot.arm.tooltip"));
                 lines.add(itemRateTooltip(GTValues.UV));
             })))
-            .tag(CustomTags.ROBOT_ARMS)
+            .tag(GTTags.Items.ROBOT_ARMS)
             .register();
     public static ItemEntry<ComponentItem> ROBOT_ARM_UHV = GTCEuAPI.isHighTier() ?
             REGISTRATE.item("uhv_robot_arm", ComponentItem::create)
@@ -1303,35 +1304,35 @@ public class GTItems {
 
     public static ItemEntry<Item> FIELD_GENERATOR_LV = REGISTRATE.item("lv_field_generator", Item::new)
             .lang("LV Field Generator")
-            .tag(CustomTags.FIELD_GENERATORS)
+            .tag(GTTags.Items.FIELD_GENERATORS)
             .register();
     public static ItemEntry<Item> FIELD_GENERATOR_MV = REGISTRATE.item("mv_field_generator", Item::new)
             .lang("MV Field Generator")
-            .tag(CustomTags.FIELD_GENERATORS)
+            .tag(GTTags.Items.FIELD_GENERATORS)
             .register();
     public static ItemEntry<Item> FIELD_GENERATOR_HV = REGISTRATE.item("hv_field_generator", Item::new)
             .lang("HV Field Generator")
-            .tag(CustomTags.FIELD_GENERATORS)
+            .tag(GTTags.Items.FIELD_GENERATORS)
             .register();
     public static ItemEntry<Item> FIELD_GENERATOR_EV = REGISTRATE.item("ev_field_generator", Item::new)
             .lang("EV Field Generator")
-            .tag(CustomTags.FIELD_GENERATORS)
+            .tag(GTTags.Items.FIELD_GENERATORS)
             .register();
     public static ItemEntry<Item> FIELD_GENERATOR_IV = REGISTRATE.item("iv_field_generator", Item::new)
             .lang("IV Field Generator")
-            .tag(CustomTags.FIELD_GENERATORS)
+            .tag(GTTags.Items.FIELD_GENERATORS)
             .register();
     public static ItemEntry<Item> FIELD_GENERATOR_LuV = REGISTRATE.item("luv_field_generator", Item::new)
             .lang("LuV Field Generator")
-            .tag(CustomTags.FIELD_GENERATORS)
+            .tag(GTTags.Items.FIELD_GENERATORS)
             .register();
     public static ItemEntry<Item> FIELD_GENERATOR_ZPM = REGISTRATE.item("zpm_field_generator", Item::new)
             .lang("ZPM Field Generator")
-            .tag(CustomTags.FIELD_GENERATORS)
+            .tag(GTTags.Items.FIELD_GENERATORS)
             .register();
     public static ItemEntry<Item> FIELD_GENERATOR_UV = REGISTRATE.item("uv_field_generator", Item::new)
             .lang("UV Field Generator")
-            .tag(CustomTags.FIELD_GENERATORS)
+            .tag(GTTags.Items.FIELD_GENERATORS)
             .register();
     public static ItemEntry<Item> FIELD_GENERATOR_UHV = GTCEuAPI.isHighTier() ?
             REGISTRATE.item("uhv_field_generator", Item::new).lang("UHV Field Generator")
@@ -1355,28 +1356,28 @@ public class GTItems {
             null;
 
     public static ItemEntry<Item> EMITTER_LV = REGISTRATE.item("lv_emitter", Item::new).lang("LV Emitter")
-            .tag(CustomTags.EMITTERS)
+            .tag(GTTags.Items.EMITTERS)
             .register();
     public static ItemEntry<Item> EMITTER_MV = REGISTRATE.item("mv_emitter", Item::new).lang("MV Emitter")
-            .tag(CustomTags.EMITTERS)
+            .tag(GTTags.Items.EMITTERS)
             .register();
     public static ItemEntry<Item> EMITTER_HV = REGISTRATE.item("hv_emitter", Item::new).lang("HV Emitter")
-            .tag(CustomTags.EMITTERS)
+            .tag(GTTags.Items.EMITTERS)
             .register();
     public static ItemEntry<Item> EMITTER_EV = REGISTRATE.item("ev_emitter", Item::new).lang("EV Emitter")
-            .tag(CustomTags.EMITTERS)
+            .tag(GTTags.Items.EMITTERS)
             .register();
     public static ItemEntry<Item> EMITTER_IV = REGISTRATE.item("iv_emitter", Item::new).lang("IV Emitter")
-            .tag(CustomTags.EMITTERS)
+            .tag(GTTags.Items.EMITTERS)
             .register();
     public static ItemEntry<Item> EMITTER_LuV = REGISTRATE.item("luv_emitter", Item::new).lang("LuV Emitter")
-            .tag(CustomTags.EMITTERS)
+            .tag(GTTags.Items.EMITTERS)
             .register();
     public static ItemEntry<Item> EMITTER_ZPM = REGISTRATE.item("zpm_emitter", Item::new).lang("ZPM Emitter")
-            .tag(CustomTags.EMITTERS)
+            .tag(GTTags.Items.EMITTERS)
             .register();
     public static ItemEntry<Item> EMITTER_UV = REGISTRATE.item("uv_emitter", Item::new).lang("UV Emitter")
-            .tag(CustomTags.EMITTERS)
+            .tag(GTTags.Items.EMITTERS)
             .register();
     public static ItemEntry<Item> EMITTER_UHV = GTCEuAPI.isHighTier() ? REGISTRATE.item("uhv_emitter", Item::new)
             .lang("UHV Emitter")
@@ -1395,28 +1396,28 @@ public class GTItems {
             .register() : null;
 
     public static ItemEntry<Item> SENSOR_LV = REGISTRATE.item("lv_sensor", Item::new).lang("LV Sensor")
-            .tag(CustomTags.SENSORS)
+            .tag(GTTags.Items.SENSORS)
             .register();
     public static ItemEntry<Item> SENSOR_MV = REGISTRATE.item("mv_sensor", Item::new).lang("MV Sensor")
-            .tag(CustomTags.SENSORS)
+            .tag(GTTags.Items.SENSORS)
             .register();
     public static ItemEntry<Item> SENSOR_HV = REGISTRATE.item("hv_sensor", Item::new).lang("HV Sensor")
-            .tag(CustomTags.SENSORS)
+            .tag(GTTags.Items.SENSORS)
             .register();
     public static ItemEntry<Item> SENSOR_EV = REGISTRATE.item("ev_sensor", Item::new).lang("EV Sensor")
-            .tag(CustomTags.SENSORS)
+            .tag(GTTags.Items.SENSORS)
             .register();
     public static ItemEntry<Item> SENSOR_IV = REGISTRATE.item("iv_sensor", Item::new).lang("IV Sensor")
-            .tag(CustomTags.SENSORS)
+            .tag(GTTags.Items.SENSORS)
             .register();
     public static ItemEntry<Item> SENSOR_LuV = REGISTRATE.item("luv_sensor", Item::new).lang("LuV Sensor")
-            .tag(CustomTags.SENSORS)
+            .tag(GTTags.Items.SENSORS)
             .register();
     public static ItemEntry<Item> SENSOR_ZPM = REGISTRATE.item("zpm_sensor", Item::new).lang("ZPM Sensor")
-            .tag(CustomTags.SENSORS)
+            .tag(GTTags.Items.SENSORS)
             .register();
     public static ItemEntry<Item> SENSOR_UV = REGISTRATE.item("uv_sensor", Item::new).lang("UV Sensor")
-            .tag(CustomTags.SENSORS)
+            .tag(GTTags.Items.SENSORS)
             .register();
     public static ItemEntry<Item> SENSOR_UHV = GTCEuAPI.isHighTier() ? REGISTRATE.item("uhv_sensor", Item::new)
             .lang("UHV Sensor")
@@ -1444,17 +1445,15 @@ public class GTItems {
             .lang("Data Module").onRegister(attach(new DataItemBehavior(true, 256)))
             .register();
 
-    public static final Map<DyeColor, ItemEntry<Item>> GLASS_LENSES = new HashMap<>();
-
+    public static final Map<DyeColor, ItemEntry<Item>> GLASS_LENSES = new Reference2ObjectLinkedOpenHashMap<>();
     static {
-
         for (DyeColor color : DyeColor.values()) {
             if (color == DyeColor.WHITE) continue;
             GLASS_LENSES.put(color,
-                    REGISTRATE.item(String.format("%s_glass_lens", color.getName()), Item::new)
-                            .lang("Glass Lens (%s)".formatted(toEnglishName(color.getName())))
-                            .tag(CustomTags.LENSES, CustomTags.GLASS_LENS)
-                            .tag(TagUtil.createItemTag("lenses/" + color.getName()))
+                    REGISTRATE.item(String.format("%s_glass_lens", color.getSerializedName()), Item::new)
+                            .lang("Glass Lens (%s)".formatted(toEnglishName(color.getSerializedName())))
+                            .tag(GTTags.Items.LENSES_GLASS)
+                            .tag(GTTags.Items.LENSES_BY_COLOR.get(color))
                             .register());
         }
     }
@@ -1610,34 +1609,34 @@ public class GTItems {
             .register();
 
     public static ItemEntry<Item> VACUUM_TUBE = REGISTRATE.item("vacuum_tube", Item::new).lang("Vacuum Tube")
-            .tag(CustomTags.ULV_CIRCUITS).register();
+            .tag(GTTags.Items.CIRCUITS_ULV).register();
     public static ItemEntry<Item> GLASS_TUBE = REGISTRATE.item("glass_tube", Item::new).lang("Glass Tube")
             .onRegister(materialInfo(new ItemMaterialInfo(new MaterialStack(GTMaterials.Glass, GTValues.M))))
             .register();
     public static ItemEntry<Item> TRANSISTOR = REGISTRATE.item("transistor", Item::new).lang("Transistor")
-            .tag(CustomTags.TRANSISTORS)
+            .tag(GTTags.Items.TRANSISTORS)
             .register();
     public static ItemEntry<Item> RESISTOR = REGISTRATE.item("resistor", Item::new).lang("Resistor")
-            .tag(CustomTags.RESISTORS)
+            .tag(GTTags.Items.RESISTORS)
             .register();
     public static ItemEntry<Item> CAPACITOR = REGISTRATE.item("capacitor", Item::new).lang("Capacitor")
-            .tag(CustomTags.CAPACITORS)
+            .tag(GTTags.Items.CAPACITORS)
             .register();
-    public static ItemEntry<Item> DIODE = REGISTRATE.item("diode", Item::new).lang("Diode").tag(CustomTags.DIODES)
+    public static ItemEntry<Item> DIODE = REGISTRATE.item("diode", Item::new).lang("Diode").tag(GTTags.Items.DIODES)
             .register();
     public static ItemEntry<Item> INDUCTOR = REGISTRATE.item("inductor", Item::new).lang("Inductor")
-            .tag(CustomTags.INDUCTORS)
+            .tag(GTTags.Items.INDUCTORS)
             .register();
     public static ItemEntry<Item> SMD_TRANSISTOR = REGISTRATE.item("smd_transistor", Item::new).lang("SMD Transistor")
-            .tag(CustomTags.TRANSISTORS).register();
+            .tag(GTTags.Items.TRANSISTORS).register();
     public static ItemEntry<Item> SMD_RESISTOR = REGISTRATE.item("smd_resistor", Item::new).lang("SMD Resistor")
-            .tag(CustomTags.RESISTORS).register();
+            .tag(GTTags.Items.RESISTORS).register();
     public static ItemEntry<Item> SMD_CAPACITOR = REGISTRATE.item("smd_capacitor", Item::new).lang("SMD Capacitor")
-            .tag(CustomTags.CAPACITORS).register();
+            .tag(GTTags.Items.CAPACITORS).register();
     public static ItemEntry<Item> SMD_DIODE = REGISTRATE.item("smd_diode", Item::new).lang("SMD Diode")
-            .tag(CustomTags.DIODES).register();
+            .tag(GTTags.Items.DIODES).register();
     public static ItemEntry<Item> SMD_INDUCTOR = REGISTRATE.item("smd_inductor", Item::new).lang("SMD Inductor")
-            .tag(CustomTags.INDUCTORS).register();
+            .tag(GTTags.Items.INDUCTORS).register();
     public static ItemEntry<Item> ADVANCED_SMD_TRANSISTOR = REGISTRATE.item("advanced_smd_transistor", Item::new)
             .lang("Advanced SMD Transistor").register();
     public static ItemEntry<Item> ADVANCED_SMD_RESISTOR = REGISTRATE.item("advanced_smd_resistor", Item::new)
@@ -1651,96 +1650,96 @@ public class GTItems {
 
     // T1: Electronic
     public static ItemEntry<Item> ELECTRONIC_CIRCUIT_LV = REGISTRATE.item("basic_electronic_circuit", Item::new)
-            .lang("Basic Electronic Circuit").tag(CustomTags.LV_CIRCUITS)
+            .lang("Basic Electronic Circuit").tag(GTTags.Items.CIRCUITS_LV)
             .register();
     public static ItemEntry<Item> ELECTRONIC_CIRCUIT_MV = REGISTRATE.item("good_electronic_circuit", Item::new)
-            .lang("Good Electronic Circuit").tag(CustomTags.MV_CIRCUITS)
+            .lang("Good Electronic Circuit").tag(GTTags.Items.CIRCUITS_MV)
             .register();
 
     // T2: Integrated
     public static ItemEntry<Item> INTEGRATED_CIRCUIT_LV = REGISTRATE.item("basic_integrated_circuit", Item::new)
-            .lang("Basic Integrated Circuit").tag(CustomTags.LV_CIRCUITS)
+            .lang("Basic Integrated Circuit").tag(GTTags.Items.CIRCUITS_LV)
             .register();
     public static ItemEntry<Item> INTEGRATED_CIRCUIT_MV = REGISTRATE.item("good_integrated_circuit", Item::new)
-            .lang("Good Integrated Circuit").tag(CustomTags.MV_CIRCUITS)
+            .lang("Good Integrated Circuit").tag(GTTags.Items.CIRCUITS_MV)
             .register();
     public static ItemEntry<Item> INTEGRATED_CIRCUIT_HV = REGISTRATE.item("advanced_integrated_circuit", Item::new)
-            .lang("Advanced Integrated Circuit").tag(CustomTags.HV_CIRCUITS)
+            .lang("Advanced Integrated Circuit").tag(GTTags.Items.CIRCUITS_HV)
             .register();
 
     // ULV/LV easier circuits
     public static ItemEntry<Item> NAND_CHIP_ULV = REGISTRATE.item("nand_chip", Item::new).lang("NAND Chip")
-            .tag(CustomTags.ULV_CIRCUITS).register();
+            .tag(GTTags.Items.CIRCUITS_ULV).register();
     public static ItemEntry<Item> MICROPROCESSOR_LV = REGISTRATE.item("microchip_processor", Item::new)
-            .lang("Microchip Processor").tag(CustomTags.LV_CIRCUITS)
+            .lang("Microchip Processor").tag(GTTags.Items.CIRCUITS_LV)
             .register();
 
     // T3: Processor
     public static ItemEntry<Item> PROCESSOR_MV = REGISTRATE.item("micro_processor", Item::new).lang("Microprocessor")
-            .tag(CustomTags.MV_CIRCUITS).register();
+            .tag(GTTags.Items.CIRCUITS_MV).register();
     public static ItemEntry<Item> PROCESSOR_ASSEMBLY_HV = REGISTRATE.item("micro_processor_assembly", Item::new)
-            .lang("Microprocessor Assembly").tag(CustomTags.HV_CIRCUITS)
+            .lang("Microprocessor Assembly").tag(GTTags.Items.CIRCUITS_HV)
             .register();
     public static ItemEntry<Item> WORKSTATION_EV = REGISTRATE.item("micro_processor_computer", Item::new)
-            .lang("Microprocessor Supercomputer").tag(CustomTags.EV_CIRCUITS)
+            .lang("Microprocessor Supercomputer").tag(GTTags.Items.CIRCUITS_EV)
             .register();
     public static ItemEntry<Item> MAINFRAME_IV = REGISTRATE.item("micro_processor_mainframe", Item::new)
-            .lang("Microprocessor Mainframe").tag(CustomTags.IV_CIRCUITS)
+            .lang("Microprocessor Mainframe").tag(GTTags.Items.CIRCUITS_IV)
             .register();
 
     // T4: Nano
     public static ItemEntry<Item> NANO_PROCESSOR_HV = REGISTRATE.item("nano_processor", Item::new).lang("Nanoprocessor")
-            .tag(CustomTags.HV_CIRCUITS).register();
+            .tag(GTTags.Items.CIRCUITS_HV).register();
     public static ItemEntry<Item> NANO_PROCESSOR_ASSEMBLY_EV = REGISTRATE.item("nano_processor_assembly", Item::new)
-            .lang("Nanoprocessor Assembly").tag(CustomTags.EV_CIRCUITS)
+            .lang("Nanoprocessor Assembly").tag(GTTags.Items.CIRCUITS_EV)
             .register();
     public static ItemEntry<Item> NANO_COMPUTER_IV = REGISTRATE.item("nano_processor_computer", Item::new)
-            .lang("Nanoprocessor Supercomputer").tag(CustomTags.IV_CIRCUITS)
+            .lang("Nanoprocessor Supercomputer").tag(GTTags.Items.CIRCUITS_IV)
             .register();
     public static ItemEntry<Item> NANO_MAINFRAME_LuV = REGISTRATE.item("nano_processor_mainframe", Item::new)
-            .lang("Nanoprocessor Mainframe").tag(CustomTags.LuV_CIRCUITS)
+            .lang("Nanoprocessor Mainframe").tag(GTTags.Items.CIRCUITS_LuV)
             .register();
 
     // T5: Quantum
     public static ItemEntry<Item> QUANTUM_PROCESSOR_EV = REGISTRATE.item("quantum_processor", Item::new)
-            .lang("Quantum Processor").tag(CustomTags.EV_CIRCUITS)
+            .lang("Quantum Processor").tag(GTTags.Items.CIRCUITS_EV)
             .register();
     public static ItemEntry<Item> QUANTUM_ASSEMBLY_IV = REGISTRATE.item("quantum_processor_assembly", Item::new)
-            .lang("Quantum Processor Assembly").tag(CustomTags.IV_CIRCUITS)
+            .lang("Quantum Processor Assembly").tag(GTTags.Items.CIRCUITS_IV)
             .register();
     public static ItemEntry<Item> QUANTUM_COMPUTER_LuV = REGISTRATE.item("quantum_processor_computer", Item::new)
-            .lang("Quantum Processor Supercomputer").tag(CustomTags.LuV_CIRCUITS)
+            .lang("Quantum Processor Supercomputer").tag(GTTags.Items.CIRCUITS_LuV)
             .register();
     public static ItemEntry<Item> QUANTUM_MAINFRAME_ZPM = REGISTRATE.item("quantum_processor_mainframe", Item::new)
-            .lang("Quantum Processor Mainframe").tag(CustomTags.ZPM_CIRCUITS)
+            .lang("Quantum Processor Mainframe").tag(GTTags.Items.CIRCUITS_ZPM)
             .register();
 
     // T6: Crystal
     public static ItemEntry<Item> CRYSTAL_PROCESSOR_IV = REGISTRATE.item("crystal_processor", Item::new)
-            .lang("Crystal Processor").tag(CustomTags.IV_CIRCUITS)
+            .lang("Crystal Processor").tag(GTTags.Items.CIRCUITS_IV)
             .register();
     public static ItemEntry<Item> CRYSTAL_ASSEMBLY_LuV = REGISTRATE.item("crystal_processor_assembly", Item::new)
-            .lang("Crystal Processor Assembly").tag(CustomTags.LuV_CIRCUITS)
+            .lang("Crystal Processor Assembly").tag(GTTags.Items.CIRCUITS_LuV)
             .register();
     public static ItemEntry<Item> CRYSTAL_COMPUTER_ZPM = REGISTRATE.item("crystal_processor_computer", Item::new)
-            .lang("Crystal Processor Supercomputer").tag(CustomTags.ZPM_CIRCUITS)
+            .lang("Crystal Processor Supercomputer").tag(GTTags.Items.CIRCUITS_ZPM)
             .register();
     public static ItemEntry<Item> CRYSTAL_MAINFRAME_UV = REGISTRATE.item("crystal_processor_mainframe", Item::new)
-            .lang("Crystal Processor Mainframe").tag(CustomTags.UV_CIRCUITS)
+            .lang("Crystal Processor Mainframe").tag(GTTags.Items.CIRCUITS_UV)
             .register();
 
     // T7: Wetware
     public static ItemEntry<Item> WETWARE_PROCESSOR_LuV = REGISTRATE.item("wetware_processor", Item::new)
-            .lang("Wetware Processor").tag(CustomTags.LuV_CIRCUITS)
+            .lang("Wetware Processor").tag(GTTags.Items.CIRCUITS_LuV)
             .register();
     public static ItemEntry<Item> WETWARE_PROCESSOR_ASSEMBLY_ZPM = REGISTRATE
             .item("wetware_processor_assembly", Item::new).lang("Wetware Processor Assembly")
-            .tag(CustomTags.ZPM_CIRCUITS).register();
+            .tag(GTTags.Items.CIRCUITS_ZPM).register();
     public static ItemEntry<Item> WETWARE_SUPER_COMPUTER_UV = REGISTRATE.item("wetware_processor_computer", Item::new)
-            .lang("Wetware Processor Supercomputer").tag(CustomTags.UV_CIRCUITS)
+            .lang("Wetware Processor Supercomputer").tag(GTTags.Items.CIRCUITS_UV)
             .register();
     public static ItemEntry<Item> WETWARE_MAINFRAME_UHV = REGISTRATE.item("wetware_processor_mainframe", Item::new)
-            .lang("Wetware Processor Mainframe").tag(CustomTags.UHV_CIRCUITS)
+            .lang("Wetware Processor Mainframe").tag(GTTags.Items.CIRCUITS_UHV)
             .register();
 
     public static ItemEntry<Item> COMPONENT_GRINDER_DIAMOND = REGISTRATE.item("diamond_grinding_head", Item::new)
@@ -2042,7 +2041,7 @@ public class GTItems {
             .onRegister(modelPredicate(GTCEu.id("circuit"),
                     (itemStack) -> IntCircuitBehaviour.getCircuitConfiguration(itemStack) / 100f))
             .onRegister(attach(new IntCircuitBehaviour()))
-            .tag(CustomTags.SKIP_ITEM_DETECTOR)
+            .tag(GTTags.Items.SKIP_ITEM_DETECTOR)
             .register();
 
     // public static ItemEntry<ComponentItem> FOAM_SPRAYER = REGISTRATE.item("foam_sprayer",
@@ -2061,7 +2060,7 @@ public class GTItems {
                             .effect(() -> new MobEffectInstance(MobEffects.HUNGER, 400), .40f)
                             .effect(() -> new MobEffectInstance(MobEffects.POISON, 100), .05f)
                             .build())))
-            .tag(CustomTags.WHEAT_DOUGHS)
+            .tag(GTTags.Items.DOUGHS_WHEAT)
             .register();
     public static ItemEntry<ComponentItem> PLANT_BALL = REGISTRATE.item("plant_ball", ComponentItem::create)
             .onRegister(burnTime(75)).register();
@@ -2190,7 +2189,7 @@ public class GTItems {
             .onRegister(attach(new MachineConfigCopyBehaviour()))
             .register();
 
-    public static final Map<DyeColor, ItemEntry<DyeItem>> CHEMICAL_DYES = new Object2ObjectOpenHashMap<>();
+    public static final Map<DyeColor, ItemEntry<DyeItem>> CHEMICAL_DYES = new Reference2ObjectLinkedOpenHashMap<>();
     static {
         for (DyeColor color : DyeColor.values()) {
             CHEMICAL_DYES.put(color, REGISTRATE
@@ -2202,14 +2201,15 @@ public class GTItems {
         }
     }
 
-    public static final ItemEntry<ComponentItem>[] SPRAY_CAN_DYES = new ItemEntry[DyeColor.values().length];
+    public static final Map<DyeColor, ItemEntry<ComponentItem>> SPRAY_CANS = new Reference2ObjectLinkedOpenHashMap<>();
     static {
-        for (int i = 0; i < DyeColor.values().length; i++) {
-            var dyeColor = DyeColor.values()[i];
-            SPRAY_CAN_DYES[i] = REGISTRATE.item("%s_dye_spray_can".formatted(dyeColor.getName()), ComponentItem::create)
-                    .lang("Spray Can (%s)".formatted(toEnglishName(dyeColor.getName())))
-                    .properties(p -> p.stacksTo(1))
-                    .onRegister(attach(new ColorSprayBehaviour(() -> SPRAY_EMPTY.asStack(), 512, i))).register();
+        for (DyeColor color : DyeColor.values()) {
+            SPRAY_CANS.put(color,
+                    REGISTRATE.item("%s_dye_spray_can".formatted(color.getSerializedName()), ComponentItem::create)
+                            .lang("Spray Can (%s)".formatted(toEnglishName(color.getSerializedName())))
+                            .properties(p -> p.stacksTo(1))
+                            .onRegister(attach(new ColorSprayBehaviour(() -> SPRAY_EMPTY.asStack(), 512, color)))
+                            .register());
         }
     }
 
@@ -2320,7 +2320,7 @@ public class GTItems {
             .lang("NanoMuscle™ Suite Boots")
             .properties(p -> p.rarity(Rarity.UNCOMMON))
             .tag(Tags.Items.ARMORS_BOOTS)
-            .tag(CustomTags.STEP_BOOTS)
+            .tag(GTTags.Items.STEP_BOOTS)
             .register();
     public static ItemEntry<ArmorComponentItem> NANO_HELMET = REGISTRATE
             .item("nanomuscle_helmet", (p) -> new ArmorComponentItem(GTArmorMaterials.ARMOR, ArmorItem.Type.HELMET, p)
@@ -2340,7 +2340,7 @@ public class GTItems {
                             .setArmorLogic(new HazmatSuit(ArmorItem.Type.HELMET, "bad_hazmat")))
             .lang("Face Mask")
             .tag(Tags.Items.ARMORS_HELMETS)
-            .tag(CustomTags.PPE_ARMOR)
+            .tag(GTTags.Items.PPE_ARMOR)
             .onRegister(attach(new TooltipBehavior(tooltips -> {
                 tooltips.add(Component.translatable("tooltip.gtceu.hazard_trigger.protection"));
                 tooltips.add(Component.translatable("tooltip.gtceu.hazard_trigger.inhalation"));
@@ -2352,7 +2352,7 @@ public class GTItems {
                             .setArmorLogic(new HazmatSuit(ArmorItem.Type.CHESTPLATE, "bad_hazmat")))
             .lang("Rubber Gloves")
             .tag(Tags.Items.ARMORS_CHESTPLATES)
-            .tag(CustomTags.PPE_ARMOR)
+            .tag(GTTags.Items.PPE_ARMOR)
             .onRegister(attach(new TooltipBehavior(tooltips -> {
                 tooltips.add(Component.translatable("tooltip.gtceu.hazard_trigger.protection"));
                 tooltips.add(Component.translatable("tooltip.gtceu.hazard_trigger.skin_contact"));
@@ -2365,7 +2365,7 @@ public class GTItems {
             .lang("Hazardous Materials Suit Chestpiece")
             .properties(p -> p.rarity(Rarity.UNCOMMON))
             .tag(Tags.Items.ARMORS_CHESTPLATES)
-            .tag(CustomTags.PPE_ARMOR)
+            .tag(GTTags.Items.PPE_ARMOR)
             .register();
     public static ItemEntry<ArmorComponentItem> HAZMAT_LEGGINGS = REGISTRATE
             .item("hazmat_leggings",
@@ -2374,7 +2374,7 @@ public class GTItems {
             .lang("Hazardous Materials Suit Leggings")
             .properties(p -> p.rarity(Rarity.UNCOMMON))
             .tag(Tags.Items.ARMORS_LEGGINGS)
-            .tag(CustomTags.PPE_ARMOR)
+            .tag(GTTags.Items.PPE_ARMOR)
             .register();
     public static ItemEntry<ArmorComponentItem> HAZMAT_BOOTS = REGISTRATE
             .item("hazmat_boots",
@@ -2383,7 +2383,7 @@ public class GTItems {
             .lang("Hazardous Materials Suit Boots")
             .properties(p -> p.rarity(Rarity.UNCOMMON))
             .tag(Tags.Items.ARMORS_BOOTS)
-            .tag(CustomTags.PPE_ARMOR)
+            .tag(GTTags.Items.PPE_ARMOR)
             .register();
     public static ItemEntry<ArmorComponentItem> HAZMAT_HELMET = REGISTRATE
             .item("hazmat_headpiece",
@@ -2392,7 +2392,7 @@ public class GTItems {
             .lang("Hazardous Materials Suit Headpiece")
             .properties(p -> p.rarity(Rarity.UNCOMMON))
             .tag(Tags.Items.ARMORS_HELMETS)
-            .tag(CustomTags.PPE_ARMOR)
+            .tag(GTTags.Items.PPE_ARMOR)
             .register();
 
     public static ItemEntry<ArmorComponentItem> QUANTUM_CHESTPLATE = REGISTRATE
@@ -2407,7 +2407,7 @@ public class GTItems {
             .properties(p -> p.rarity(Rarity.RARE))
             .tag(Tags.Items.ARMORS_CHESTPLATES)
             .tag(ItemTags.FREEZE_IMMUNE_WEARABLES)
-            .tag(CustomTags.PPE_ARMOR)
+            .tag(GTTags.Items.PPE_ARMOR)
             .register();
     public static ItemEntry<ArmorComponentItem> QUANTUM_LEGGINGS = REGISTRATE
             .item("quarktech_leggings",
@@ -2420,7 +2420,7 @@ public class GTItems {
             .lang("QuarkTech™ Suite Leggings")
             .properties(p -> p.rarity(Rarity.RARE))
             .tag(Tags.Items.ARMORS_LEGGINGS)
-            .tag(CustomTags.PPE_ARMOR)
+            .tag(GTTags.Items.PPE_ARMOR)
             .register();
     public static ItemEntry<ArmorComponentItem> QUANTUM_BOOTS = REGISTRATE
             .item("quarktech_boots", (p) -> new ArmorComponentItem(GTArmorMaterials.ARMOR, ArmorItem.Type.BOOTS, p)
@@ -2432,8 +2432,8 @@ public class GTItems {
             .lang("QuarkTech™ Suite Boots")
             .properties(p -> p.rarity(Rarity.RARE))
             .tag(Tags.Items.ARMORS_BOOTS)
-            .tag(CustomTags.PPE_ARMOR)
-            .tag(CustomTags.STEP_BOOTS)
+            .tag(GTTags.Items.PPE_ARMOR)
+            .tag(GTTags.Items.STEP_BOOTS)
             .register();
     public static ItemEntry<ArmorComponentItem> QUANTUM_HELMET = REGISTRATE
             .item("quarktech_helmet", (p) -> new ArmorComponentItem(GTArmorMaterials.ARMOR, ArmorItem.Type.HELMET, p)
@@ -2445,7 +2445,7 @@ public class GTItems {
             .lang("QuarkTech™ Suite Helmet")
             .properties(p -> p.rarity(Rarity.RARE))
             .tag(Tags.Items.ARMORS_HELMETS)
-            .tag(CustomTags.PPE_ARMOR)
+            .tag(GTTags.Items.PPE_ARMOR)
             .register();
 
     public static ItemEntry<ArmorComponentItem> LIQUID_FUEL_JETPACK = REGISTRATE
@@ -2491,7 +2491,7 @@ public class GTItems {
             .lang("Advanced NanoMuscle™ Suite Chestplate")
             .properties(p -> p.rarity(Rarity.RARE))
             .tag(Tags.Items.ARMORS_CHESTPLATES)
-            .tag(CustomTags.PPE_ARMOR)
+            .tag(GTTags.Items.PPE_ARMOR)
             .register();
     public static ItemEntry<ArmorComponentItem> QUANTUM_CHESTPLATE_ADVANCED = REGISTRATE
             .item("advanced_quarktech_chestplate", (p) -> new ArmorComponentItem(GTArmorMaterials.ARMOR,
@@ -2505,7 +2505,7 @@ public class GTItems {
             .properties(p -> p.rarity(Rarity.EPIC))
             .tag(Tags.Items.ARMORS_CHESTPLATES)
             .tag(ItemTags.FREEZE_IMMUNE_WEARABLES)
-            .tag(CustomTags.PPE_ARMOR)
+            .tag(GTTags.Items.PPE_ARMOR)
             .register();
 
     public static ItemEntry<Item> POWER_THRUSTER = REGISTRATE.item("power_thruster", Item::new)
